vm/mlvm/anonloader/stress/oome prints warning: CodeHeap: # of free blocks > 10000

XMLWordPrintable

    • b06
    • generic
    • generic

      The test run produces the following warning:

      Java HotSpot(TM) 64-Bit Server VM warning: CodeHeap: # of free blocks > 10000

        1. codecache_data.xls
          47 kB
          Albert Noll
        2. codecache_data.pdf
          185 kB
          Albert Noll

            Assignee:
            Albert Noll (Inactive)
            Reporter:
            Albert Noll (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: